dataset1235/2025-2/805158916/users/3563627350/executions/2651470117_3902794658.log
== SUBMISSION (2025-08-20 14:32:42)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input("digite sua altura:")
print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 14:12:40)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input("digite sua altura:")
print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 14:32:45)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input("digite sua altura:")
print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:11:45)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input(digite sua altura:")
print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 14:11:01)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input(digite sua altura:")
print("Nome:", nome")
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:12:38)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input("digite sua altura:")
print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 14:11:46)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input(digite sua altura:")
print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:10:56)
-- CODE: 
nome = input("digite seu nome:")
idade = input("digite sua idade:")
altura = input(digite sua altura:")
print("Nome:", nome")
print("Idade:", idade)
print("Altura:", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 3
    altura = input(digite sua altura:")
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
